--- a/src/main/resources/assets/famod/lang/en_us.lang
+++ b/src/main/resources/assets/famod/lang/en_us.lang
@@ -3,9 +3,13 @@ item.ingot_mangan.name=Mangan Ingot
 item.dust_mangan.name=Mangan Dust
 item.mangan_axe.name=Mangan Axe
 item.mangan_pickaxe.name=Mangan Pickaxe
+item.coal_shock.name=Shock Coal
+item.smelting_eye.name=Smelring Eye
 
 # Blocks
 tile.ore_mangan.name=Mangan Ore
+tile.ore_shockcoal.name=Shock Coal Ore
+tile.block_shockcoal.name=Shock Coal Block
 
 # Others
 itemGroup.famod=FaMod
